--- a/FJCore/FJCore.csproj
+++ b/FJCore/FJCore.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{2A3DD201-4EB0-44BA-8A99-8D5ECD538F1F}</ProjectGuid>
     <ProjectTypeGuids>{A1591282-1198-4647-A2B1-27E5FF5F6F3B};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -57,8 +57,11 @@
     <Compile Include="Decoder\JpegScan.cs" />
     <Compile Include="Encoder\JpegEncoder.cs" />
     <Compile Include="FDCT.cs" />
+    <Compile Include="Filter\Convolution.cs" />
+    <Compile Include="Filter\FilterLowpassResize.cs" />
     <Compile Include="Filter\FilterNNResize.cs" />
     <Compile Include="Filter\FilterBase.cs" />
+    <Compile Include="Filter\GrayImage.cs" />
     <Compile Include="Image.cs" />
     <Compile Include="IO\BinaryReader.cs" />
     <Compile Include="IO\BinaryWriter.cs" />
