--- a/FJCore/Portable.FJCore.csproj
+++ b/FJCore/Portable.FJCore.csproj
@@ -32,8 +32,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>FluxJpeg.Core.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <None Include="FluxJpeg.Core.snk" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DCT.cs" />
